<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2026 Alwin Ibba
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="activity_log_title">Log</string>
    <string name="menu_action_activity_log_delete">Delete logs</string>
    <string name="menu_action_activity_log_show_all">Show all</string>
    <string name="menu_action_activity_log_hide_successful">Hide successful</string>
    <string name="text_activity_log_list_item_log_entry_no_log">No logs present for %s</string>
    <string name="text_activity_log_list_item_log_entry_title">Log entry for %s</string>
    <string name="text_activity_log_list_item_log_entry_success">Execution %s</string>
    <string name="text_activity_log_list_item_log_entry_timestamp">Timestamp: %s</string>
    <string name="text_activity_log_list_item_log_entry_message">Message: %s</string>
</resources>